--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,8 @@
     "name": "caojianfei/composer-lib-example-one",
     "description": "composer 包示例 1",
     "type": "library",
-    "require": {},
+    "require": {
+        "guzzlehttp/psr7": "1.6.*"
+    },
     "license": "MIT"
 }
